--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
+<!DOCTYPE html>
 <html>
 
     <head>
-        <title>My Portfolio Project</title>
+        <title>Star Labs</title>
     </head>
 
     <body>
+        <div id="header">
+            <h4 class="logoText">Star Labs</h4>
+        </div>
 
+        <div id="main">
+            <h1>Placeholder heading</h1>
+        </div>
+
+        <div id="footer">
+            <ul>
+                <li>Placeholder link 1</li>
+                <li>Placeholder link 2</li>
+                <li>Placeholder link 3</li>
+            </ul>
+        </div>
     </body>
 
 </html>
