--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html>
 
     <head>
+        <!-- Meta starts -->
+        <meta charset="UTF-8">
+        <meta name="description" content="Star Labs - Codecademy Portfolio Project">
+        <meta name="keywords" content="Star Labs, Portfolio, Project, Learning">
+        <meta name="author" content="Tenttu89">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Meta ends -->
+
         <title>Star Labs</title>
+
+        <!-- Linked styles and head scripts starts -->
+        <link rel="stylesheet" href="/css/style.css">
+        <!-- Linked styles and head scripts ends -->
+
     </head>
 
     <body>
