--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Star Labs</title>
 
         <!-- Linked styles and head scripts starts -->
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <!-- Linked styles and head scripts ends -->
 
     </head>
