--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <h1>Placeholder heading</h1>
         </div>
 
+        <p>Placeholder paragraph</p>
+        <p>Another placeholder paragraph</p>
+        <p>Yet another placeholder paragraph</p>
+
         <div id="footer">
             <ul>
                 <li>Placeholder link 1</li>
