--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <h4 class="logoText">Star Labs</h4>
         </div>
 
+        <div id="banner">
+            <h1>Star Labs</h1>
+            <h3>A Codecademy Portfolio Project</h3>
+        </div>
+
         <div id="main">
             <h1>Placeholder heading</h1>
 
