--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         </div>
 
         <div id="main">
-            <h1>Placeholder heading</h1>
+            <div id="mainContainer">
+                <h1>Placeholder heading</h1>
 
-            <p>Placeholder paragraph</p>
-            <p>Another placeholder paragraph</p>
-            <p>Yet another placeholder paragraph</p>
+                <p>Placeholder paragraph</p>
+                <p>Another placeholder paragraph</p>
+                <p>Yet another placeholder paragraph</p>
+            </div>
         </div>
 
         <div id="footer">
