--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
         <title>Star Labs</title>
 
-        <!-- Linked styles and head scripts starts -->
+        <!-- Linked styles, fonts and head scripts starts -->
         <link rel="stylesheet" href="./css/style.css">
-        <!-- Linked styles and head scripts ends -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+        <!-- Linked styles, fonts and head scripts ends -->
 
     </head>
 
