--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <body>
         <div id="header">
             <h4 class="logoText">Star Labs</h4>
+
+            <div id="navOuter">
+                <ul id="navInner">
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                    <li>Item 4</li>
+                </ul>
+            </div>
         </div>
 
         <div id="banner">
