--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="header">
             <h4 class="logoText">Star Labs</h4>
 
+            <!-- Navigation starts -->
             <div id="navOuter">
                 <ul id="navInner">
                     <li>Item 1</li>
@@ -34,6 +35,7 @@
                     <li>Item 4</li>
                 </ul>
             </div>
+            <!-- Navigation ends -->
         </div>
 
         <div id="banner">
@@ -42,11 +44,23 @@
         </div>
 
         <div id="main">
-            <h1>Placeholder heading</h1>
+            <!-- About me starts -->
+            <div id="about">
+                <h1>About me</h1>
 
-            <p>Placeholder paragraph</p>
-            <p>Another placeholder paragraph</p>
-            <p>Yet another placeholder paragraph</p>
+                <p>Placeholder paragraph</p>
+                <p>Another placeholder paragraph</p>
+                <p>Yet another placeholder paragraph</p>
+            </div>
+            <!-- About me ends -->
+
+            <div id="projects">
+                <h1>My projects</h1>
+
+                <p>Some projects of mine are listed here</p>
+                <p>Placeholder paragraph</p>
+                <p>Another placeholder paragraph</p>
+            </div>
         </div>
 
         <div id="footer">
@@ -55,6 +69,7 @@
                 <li>Placeholder link 2</li>
                 <li>Placeholder link 3</li>
             </ul>
+            <p class="copyright">Copyright &copy; Tenttu89</p>
         </div>
     </body>
 
