--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div id="main">
             <!-- About me starts -->
-            <div id="about">
+            <div id="about" class="section">
                 <h1>About me</h1>
 
                 <p>Placeholder paragraph</p>
@@ -54,7 +54,7 @@
             </div>
             <!-- About me ends -->
 
-            <div id="projects">
+            <div id="projects" class="section">
                 <h1>My projects</h1>
 
                 <p>Some projects of mine are listed here</p>
