--- a/index.html
+++ b/index.html
@@ -24,18 +24,20 @@
 
     <body>
         <div id="header">
-            <h4 class="logoText">Star Labs</h4>
+            <div class="contentWrapper">
+                <h4 class="logoText">Star Labs</h4>
 
-            <!-- Navigation starts -->
-            <div id="navOuter">
-                <ul id="navInner">
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                    <li>Item 4</li>
-                </ul>
+                <!-- Navigation starts -->
+                <div id="navOuter">
+                    <ul id="navInner">
+                        <li><a href="#">Item 1</a></li>
+                        <li><a href="#">Item 2</a></li>
+                        <li><a href="#">Item 3</a></li>
+                        <li><a href="#">Item 4</a></li>
+                    </ul>
+                </div>
+                <!-- Navigation ends -->
             </div>
-            <!-- Navigation ends -->
         </div>
 
         <div id="banner">
@@ -44,30 +46,32 @@
         </div>
 
         <div id="main">
-            <!-- About me starts -->
-            <div id="about" class="section">
-                <h1>About me</h1>
+            <div class="contentWrapper">
+                <!-- About me starts -->
+                <div id="about" class="section">
+                    <h1>About me</h1>
 
-                <p>Placeholder paragraph</p>
-                <p>Another placeholder paragraph</p>
-                <p>Yet another placeholder paragraph</p>
-            </div>
-            <!-- About me ends -->
+                    <p>Placeholder paragraph</p>
+                    <p>Another placeholder paragraph</p>
+                    <p>Yet another placeholder paragraph</p>
+                </div>
+                <!-- About me ends -->
 
-            <div id="projects" class="section">
-                <h1>My projects</h1>
+                <div id="projects" class="section">
+                    <h1>My projects</h1>
 
-                <p>Some projects of mine are listed here</p>
-                <p>Placeholder paragraph</p>
-                <p>Another placeholder paragraph</p>
+                    <p>Some projects of mine are listed here</p>
+                    <p>Placeholder paragraph</p>
+                    <p>Another placeholder paragraph</p>
+                </div>
             </div>
         </div>
 
         <div id="footer">
             <ul>
-                <li>Placeholder link 1</li>
-                <li>Placeholder link 2</li>
-                <li>Placeholder link 3</li>
+                <li><a href="#">Placeholder link 1</a></li>
+                <li><a href="#">Placeholder link 2</a></li>
+                <li><a href="#">Placeholder link 3</a></li>
             </ul>
             <p class="copyright">Copyright &copy; Tenttu89</p>
         </div>
