--- a/index.html
+++ b/index.html
@@ -50,16 +50,12 @@
                 <!-- About me starts -->
                 <div id="about" class="section">
                     <h1>About me</h1>
-
-                    <p>Placeholder paragraph</p>
-                    <p>Another placeholder paragraph</p>
-                    <p>Yet another placeholder paragraph</p>
+                    <p>I'm Tenttu89 and this portfolio website is a Codecademy Project and its purpose is to get better at building interactive websites from scratch. The website includes a solid HTML framework with stylish and modern look through CSS and on top of that, interactivity with JavaScript.</p>
                 </div>
                 <!-- About me ends -->
 
                 <div id="projects" class="section">
                     <h1>My projects</h1>
-
                     <p>Some projects of mine are listed here</p>
                     <p>Placeholder paragraph</p>
                     <p>Another placeholder paragraph</p>
