--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <input type="email" id="email" name="email" required />
                         <label for="phone">Phone number:</label>
                         <input type="number" id="phone" name="phone" required />
-                        <input type="submit" id="submit" name="submit" />
+                        <input type="button" id="submit" name="submit" />
                     </form>
                 </div>
                 <!-- Contact me ends -->
