--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                     <p>Use the form below to get in contact with me</p>
                     <form id="contactForm">
                         <label for="firstName">First name:</label><br/>
-                        <input type="text" id="firstName" name="firstName" required />
-                        <label for="lastName">Last name:</label>
-                        <input type="text" id="lastName" name="lastName" required />
-                        <label for="email">Email address:</label>
-                        <input type="email" id="email" name="email" required />
-                        <label for="phone">Phone number:</label>
-                        <input type="number" id="phone" name="phone" required />
+                        <input type="text" id="firstName" name="firstName" required /><br/>
+                        <label for="lastName">Last name:</label><br/>
+                        <input type="text" id="lastName" name="lastName" required /><br/>
+                        <label for="email">Email address:</label><br/>
+                        <input type="email" id="email" name="email" required /><br/>
+                        <label for="phone">Phone number:</label><br/>
+                        <input type="number" id="phone" name="phone" required /><br/>
                         <input type="button" id="submit" name="submit" />
                     </form>
                 </div>
