--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div id="about" class="section">
                     <h1>About me</h1>
                     <p>I'm Tenttu89 and this portfolio website is a Codecademy Project and its purpose is to get better at building interactive websites from scratch. The website includes a solid HTML framework with stylish and modern look through CSS and on top of that, interactivity with JavaScript.</p>
-                    <p>Also worth noting that this website is not my official portfolio and the site is only for testing purposes.</p>
+                    <p>Also worth noting that this website is not my official portfolio and the site is only for testing and learning purposes.</p>
                 </div>
                 <!-- About me ends -->
 
@@ -77,7 +77,8 @@
                         <input type="email" id="email" name="email" required /><br/>
                         <label for="phone">Phone number:</label><br/>
                         <input type="number" id="phone" name="phone" required /><br/>
-                        <input type="button" id="submit" name="submit" />
+                        <input type="button" id="submit" name="submit" value="Submit" /><br/>
+                        <input type="button" id="reset" name="reset" value="reset" />
                     </form>
                 </div>
                 <!-- Contact me ends -->
