--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <input type="email" id="email" name="email" required /><br/>
                         <label for="phone">Phone number:</label><br/>
                         <input type="number" id="phone" name="phone" required /><br/>
-                        <input type="button" id="submit" name="submit" value="Submit" /><br/>
-                        <input type="button" id="reset" name="reset" value="reset" />
+                        <input type="button" id="submit" name="submit" value="Submit" />
+                        <input type="button" id="reset" name="reset" value="Reset" />
                     </form>
                 </div>
                 <!-- Contact me ends -->
