--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                 <!-- About me ends -->
 
                 <!-- My projects starts -->
-                <div id="projects" class="section">
-                    <h1>My projects</h1>
-                    <p>Some projects of mine are listed here</p>
-                    <p>Placeholder paragraph</p>
-                    <p>Another placeholder paragraph</p>
+                <div id="projectBg">
+                    <div id="projects" class="section">
+                        <h1>My projects</h1>
+                        <p>Some projects of mine are listed here</p>
+                        <p>Placeholder paragraph</p>
+                        <p>Another placeholder paragraph</p>
+                    </div>
                 </div>
                 <!-- My projects ends -->
 
