--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <body>
         <div id="header">
-            <div class="contentWrapper">
+            <div class="headerWrapper">
                 <h4 class="logoText">Star Labs</h4>
 
                 <!-- Navigation starts -->
