--- a/index.html
+++ b/index.html
@@ -60,8 +60,21 @@
                     <div id="projects" class="section">
                         <h1>My projects</h1>
                         <p>Some projects of mine are listed here</p>
-                        <p>Placeholder paragraph</p>
-                        <p>Another placeholder paragraph</p>
+                        <div id="projectContainer">
+                            <div class="projectItem">
+                                <i class="fa-"
+                                <h2>Placeholder Title</h2>
+                                <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                            </div>
+                            <div class="projectItem">
+                                <h2>Placeholder Title</h2>
+                                <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                            </div>
+                            <div class="projectItem">
+                                <h2>Placeholder Title</h2>
+                                <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- My projects ends -->
