--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <!-- Linked styles, fonts and head scripts starts -->
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -62,11 +63,12 @@
                         <p>Some projects of mine are listed here</p>
                         <div id="projectContainer">
                             <div class="projectItem">
-                                <i class="fa-"
+                                <i class="fa fa-project-diagram"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
                             <div class="projectItem">
+                                <i class="fa fa-tasks"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
