--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p>Some projects of mine are listed here</p>
                         <div id="projectContainer">
                             <div class="projectItem">
-                                <i class="fa fa-project-diagram"></i>
+                                <i class="fa fa-certificate"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
