--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p>Some projects of mine are listed here</p>
                         <div id="projectContainer">
                             <div class="projectItem">
-                                <i class="fa fa-certificate"></i>
+                                <i class="fa fa-cogs"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
@@ -73,6 +73,7 @@
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
                             <div class="projectItem">
+                                <i class="fa fa-code"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
@@ -104,9 +105,10 @@
 
         <div id="footer">
             <ul>
-                <li><a href="#">Placeholder link 1</a></li>
-                <li><a href="#">Placeholder link 2</a></li>
-                <li><a href="#">Placeholder link 3</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">My Projects</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
             <p class="copyright">Copyright &copy; Tenttu89</p>
         </div>
