--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                         <h1>My projects</h1>
                         <p>Some projects of mine are listed here</p>
                         <div id="projectContainer">
-                            <div class="projectItem">
+                            <div class="projectItem first">
                                 <i class="fa fa-cogs"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
-                            <div class="projectItem">
+                            <div class="projectItem second">
                                 <i class="fa fa-tasks"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
                             </div>
-                            <div class="projectItem">
+                            <div class="projectItem third">
                                 <i class="fa fa-code"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
