--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div id="projects" class="section">
                         <h1>My projects</h1>
                         <p>Some projects of mine are listed here</p>
-                        <div id="projectContainer">
+                        <div class="projectContainer">
                             <div class="projectItem first">
                                 <i class="fa fa-cogs"></i>
                                 <h2>Placeholder Title</h2>
