--- a/index.html
+++ b/index.html
@@ -66,16 +66,19 @@
                                 <i class="fa fa-cogs"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                                <a href="#" class="projectButton">Read More</a>
                             </div>
                             <div class="projectItem second">
                                 <i class="fa fa-tasks"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                                <a href="#" class="projectButton">Read More</a>
                             </div>
                             <div class="projectItem third">
                                 <i class="fa fa-code"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
+                                <a href="#" class="projectButton">Read More</a>
                             </div>
                         </div>
                     </div>
