--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 <!-- About me starts -->
                 <div id="about" class="section">
                     <h1>About me</h1>
-                    <p>I'm Tenttu89 and this portfolio website is a Codecademy Project and its purpose is to get better at building interactive websites from scratch. The website includes a solid HTML framework with stylish and modern look through CSS and on top of that, interactivity with JavaScript.</p>
+                    <p>I'm Tenttu89 and this portfolio website is a Codecademy project and its purpose is for me to get better at building interactive websites from scratch. The website includes a solid HTML framework with stylish and modern look through CSS and on top of that, interactivity with JavaScript.</p>
+                    <p>Just to get some extra practice, my goal is also to build and include a few lightweight tools, scripts or "web apps" to the website.</p>
                     <p>Also worth noting that this website is not my official portfolio and the site is only for testing and learning purposes.</p>
                 </div>
                 <!-- About me ends -->
