--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        <script type="text/javascript" src="./js/main.js"></script>
         <!-- Linked styles, fonts and head scripts ends -->
 
     </head>
@@ -117,6 +116,10 @@
             </ul>
             <p class="copyright">Copyright &copy; Tenttu89</p>
         </div>
+
+        <!-- Footer scripts starts -->
+        <script type="text/javascript" src="./js/main.js"></script>
+        <!-- Footer scripts ends -->
     </body>
 
 </html>
