--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Navigation starts -->
                 <div id="navOuter">
                     <ul id="navInner">
-                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="#header">Home</a></li>
                         <li><a href="#about">About Me</a></li>
                         <li><a href="#projects">My Projects</a></li>
                         <li><a href="#contact">Contact Me</a></li>
