--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </head>
 
     <body>
+        <div id="top" style="visibility: hidden;"></div>
         <div id="header">
             <div class="headerWrapper">
                 <h4 class="logoText">Star Labs</h4>
@@ -31,7 +32,7 @@
                 <!-- Navigation starts -->
                 <div id="navOuter">
                     <ul id="navInner">
-                        <li><a href="#header">Home</a></li>
+                        <li><a href="#top">Home</a></li>
                         <li><a href="#about">About Me</a></li>
                         <li><a href="#projects">My Projects</a></li>
                         <li><a href="#contact">Contact Me</a></li>
