--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- Navigation starts -->
                 <div id="navOuter">
                     <ul id="navInner">
-                        <li><a href="#top">Home</a></li>
+                        <li><a href="#top">Start</a></li>
                         <li><a href="#about">About Me</a></li>
                         <li><a href="#projects">My Projects</a></li>
                         <li><a href="#contact">Contact Me</a></li>
@@ -62,7 +62,7 @@
                 <div id="projectBg">
                     <div id="projects" class="section">
                         <h1>My projects</h1>
-                        <p>Some projects of mine are listed here</p>
+                        <p class="sectionIntro">Some projects of mine are listed here (mostly lightweight tools and scripts built specifically for this site to get some JavaScript practice)</p>
                         <div class="projectContainer">
                             <div class="projectItem first">
                                 <i class="fa fa-cogs"></i>
@@ -90,7 +90,7 @@
                 <!-- Contact me starts -->
                 <div id="contact" class="section">
                     <h1>Contact me</h1>
-                    <p>Use the form below to get in contact with me</p>
+                    <p class="sectionIntro">Use the form below to get in contact with me</p>
                     <form id="contactForm">
                         <label for="firstName">First name:</label><br/>
                         <input type="text" id="firstName" name="firstName" required /><br/>
