--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div id="footer">
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="#top">Start</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">My Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
