Update (scollTop testing)

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
             <p class="copyright">Copyright &copy; Tenttu89</p>
         </div>
 
+        <!-- Scroll to top starts -->
+        <div id="scrollTop-wrapper" class="d-none d-sm-block">
+            <p id="scrollTop"> <a href="#top"><span></span></a> </p>
+        </div>
+        <!-- Scroll to top ends --> 
+
         <!-- Footer scripts starts -->
         <script type="text/javascript" src="./js/main.js"></script>
         <!-- Footer scripts ends -->
