--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
 
         <!-- Scroll to top starts -->
-        <div id="scrollTop-wrapper" class="d-none d-sm-block">
+        <div id="scrollTopWrapper" class="d-none d-sm-block">
             <p id="scrollTop"> <a href="#top"><span></span></a> </p>
         </div>
         <!-- Scroll to top ends --> 
