--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!-- About me starts -->
                 <div id="about" class="section">
                     <h1>About me</h1>
-                    <p>I'm Tenttu89 and this portfolio website is a Codecademy project and its purpose is for me to get better at building interactive websites from scratch. The website includes a solid HTML framework with simple, yet stylish and modern look through CSS and on top of that, interactivity with JavaScript.</p>
+                    <p>I'm Tenttu89, Star Labs in this instance is a fictional site or company name/title (no possible infringments of any kind have been done with purpose), this portfolio website is a Codecademy project and its purpose is for me to get better at building interactive websites from scratch. The website includes a solid HTML framework with simple, yet stylish and modern look through CSS and on top of that, interactivity with JavaScript.</p>
                     <p>Just to get some extra practice, my goal is also to build and include a few lightweight tools, scripts or "web apps" to the website.</p>
                     <p>Also worth noting that this website is not my official portfolio and the site is only for testing and learning purposes.</p>
                 </div>
