--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <!-- Meta starts -->
         <meta charset="UTF-8">
-        <meta name="description" content="Star Labs - Codecademy Portfolio Project">
-        <meta name="keywords" content="Star Labs, Portfolio, Project, Learning">
+        <meta name="description" content="Codecademy Portfolio Project">
+        <meta name="keywords" content="Portfolio, Project, Learning">
         <meta name="author" content="Tenttu89">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Meta ends -->
 
-        <title>Star Labs</title>
+        <title>Star Labs - Codecademy Portfolio Project (Practice)</title>
 
         <!-- Linked styles, fonts and head scripts starts -->
         <link rel="stylesheet" href="./css/style.css">
@@ -68,19 +68,19 @@
                                 <i class="fa fa-cogs"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
-                                <a href="#" class="projectButton">Read More</a>
+                                <a href="./project1.html" class="projectButton">Read More</a>
                             </div>
                             <div class="projectItem second">
                                 <i class="fa fa-tasks"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
-                                <a href="#" class="projectButton">Read More</a>
+                                <a href="./project2.html" class="projectButton">Read More</a>
                             </div>
                             <div class="projectItem third">
                                 <i class="fa fa-code"></i>
                                 <h2>Placeholder Title</h2>
                                 <p>Some placeholder description text for the project to let readers know some basic info about it. Some placeholder description text for the project to let readers know some basic info about it.</p>
-                                <a href="#" class="projectButton">Read More</a>
+                                <a href="./project3.html" class="projectButton">Read More</a>
                             </div>
                         </div>
                     </div>
