--- a/project1.html
+++ b/project1.html
@@ -32,7 +32,7 @@
                 <!-- Navigation starts -->
                 <div id="navOuter">
                     <ul id="navInner">
-                        <li><a href="#top">Start</a></li>
+                        <li><a href="./index.html#top">Start</a></li>
                         <li><a href="#about">About Me</a></li>
                         <li><a href="#projects">My Projects</a></li>
                         <li><a href="#contact">Contact Me</a></li>
